--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -6,6 +6,9 @@ body {
   background-position: center;
   background-size: cover;
 }
+button {
+  cursor: pointer;
+}
 .container-card {
   width: 100vw;
   display: flex;
