--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,14 +1,35 @@
-@use "reset";
-@use "variables" as v;
+@use 'reset';
+@use 'variables' as v;
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  background: v.$clr-body;
+  color: v.$clr-text-dark;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  // height: 100vh;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.header {
+  background: v.$clr-nav;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+}
+.page {
+  padding: 1rem;
+}
+a {
+  color: v.$clr-text-dark;
 }
