--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -67,7 +67,10 @@ input {
 }
 
 ul {
-list-style: none;
-padding: 0;
-margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+a {
+  text-decoration: none;
 }
